# chat_app

./: .gitignore  Cargo.toml
chat_base/: Cargo.toml
chat_base/src/: lib.rs
chat_client/: Cargo.toml
chat_client/src/: main.rs
chat_server/: Cargo.toml
chat_server/src/: main.rs
