[package]
name = "chat_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
chat_base = {path = "../chat_base"}
rmp-serde = "1.3.0"
serde = "1.0.201"
crossterm = "0.27.0"
